fix: text overflowing pre-tag and img ignoring parent width

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -12,6 +12,14 @@ a {
 	text-decoration: none;
 }
 
+pre {
+	white-space: pre-line;
+}
+
+img {
+	max-width: 100%;
+}
+
 *,
 *::before,
 *::after {
